SERVER-25675 fix collMod type check for view pipeline